--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.10"
+    "react-native": "0.59.10",
+    "react-native-gesture-handler": "^1.10.1",
+    "react-native-get-random-values": "^1.3.1",
+    "react-native-screens": "2.2.0",
+    "react-navigation": "4.0.10",
+    "react-navigation-stack": "1.10.3",
+    "react-navigation-tabs": "2.6.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
