--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/core": "7.12.16",
     "@babel/runtime": "7.12.13",
     "babel-jest": "26.6.3",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.65.0",
     "react-test-renderer": "16.8.3"
