--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.15.2",
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "^1.10.1",
