--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,8 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-firebase_auth')
+    implementation project(':@react-native-firebase_app')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-screens')
     implementation project(':react-native-get-random-values')
