--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
     implementation project(':@react-native-firebase_auth')
     implementation project(':@react-native-firebase_app')
     implementation project(':react-native-gesture-handler')
