--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/auth": "^10.8.0",
     "native-base": "^2.15.2",
@@ -17,7 +18,11 @@
     "react-native-screens": "2.2.0",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "1.10.3",
-    "react-navigation-tabs": "2.6.2"
+    "react-navigation-tabs": "2.6.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
