--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -149,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-firebase_firestore')
     implementation project(':@react-native-community_async-storage')
     implementation project(':@react-native-firebase_auth')
     implementation project(':@react-native-firebase_app')
@@ -160,6 +162,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation platform('com.google.firebase:firebase-bom:26.5.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
 }   
 
 // Run this once to be able to run the application with BUCK
