--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/auth": "^10.8.0",
+    "@react-native-firebase/firestore": "^10.8.0",
+    "jetify": "^1.0.2",
     "native-base": "^2.15.2",
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.3.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-screens": "2.2.0",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "1.10.3",
