--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "@react-native-firebase/auth": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
     "jetify": "^1.0.2",
+    "js-tokens": "^6.0.0",
+    "loose-envify": "^1.4.0",
     "moment": "^2.29.1",
     "native-base": "^2.15.2",
+    "object-assign": "^4.1.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
+    "react-is": "^17.0.1",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.3.1",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-screens": "2.2.0",
     "react-navigation": "4.0.10",
