--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.3.1",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^3.2.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-screens": "2.2.0",
     "react-navigation": "4.0.10",
