--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-firebase_storage')
     implementation project(':react-native-image-picker')
     implementation project(':@react-native-firebase_firestore')
     implementation project(':@react-native-community_async-storage')
