--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/auth": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
+    "@react-native-firebase/storage": "^10.8.0",
     "base-64": "^1.0.0",
     "jetify": "^1.0.2",
     "js-tokens": "^6.0.0",
