--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,10 @@ dependencies {
     implementation project(':@react-native-firebase_app')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-screens')
+    implementation 'com.facebook.fresco:fresco:1.+'
+    implementation 'com.facebook.fresco:animated-gif:1.+'
+    implementation 'com.facebook.fresco:animated-webp:1.+'
+    implementation 'com.facebook.fresco:webpsupport:1.+' 
     implementation project(':react-native-get-random-values')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
