--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "http://giphy.bintray.com/giphy-sdk"
             url "$rootDir/../node_modules/react-native/android"
         }
     }
