--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,3 +5,7 @@ MYAPP_RELEASE_STORE_FILE=demo-chat.keystore
 MYAPP_RELEASE_KEY_ALIAS=demochat-alias
 MYAPP_RELEASE_STORE_PASSWORD=welcome@123
 MYAPP_RELEASE_KEY_PASSWORD=welcome@123
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
