--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^3.2.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-giphy": "file:react-native-giphy-0.0.2.tgz",
     "react-native-screens": "2.2.0",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "1.10.3",
